--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bourbon": "^5.1.0",
     "del": "^2.2.0",
-    "jquery": "^3.4.1",
+    "ion-rangeslider": "^2.3.1",
+    "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "swiper": "^6.3.3"
   },
