--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "bourbon": "^5.1.0",
     "del": "^2.2.0",
+    "inputmask": "^5.0.5",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
+    "jquery-steps": "^1.1.0",
+    "jquery-validation": "^1.19.2",
     "normalize.css": "^8.0.1",
     "swiper": "^6.3.3"
   },
