--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "inputmask": "^5.0.5",
     "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
+    "jquery-mobile": "^1.5.0-alpha.1",
     "jquery-steps": "^1.1.0",
     "jquery-validation": "^1.19.2",
     "normalize.css": "^8.0.1",
