--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery-steps": "^1.1.0",
     "jquery-validation": "^1.19.2",
     "normalize.css": "^8.0.1",
+    "select2": "^4.0.13",
     "swiper": "^6.3.3"
   },
   "devDependencies": {
